--- a/fidget-rhai/Cargo.toml
+++ b/fidget-rhai/Cargo.toml
@@ -13,6 +13,7 @@ rust-version.workspace = true
 [dependencies]
 fidget-core   = { path = "../fidget-core",   version = "=0.4.0" }
 fidget-shapes = { path = "../fidget-shapes", version = "=0.4.0" }
+workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 enum-map.workspace = true
 facet.workspace = true
