--- a/fidget-gui/Cargo.toml
+++ b/fidget-gui/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fidget-gui"
-description = "GUI abstractions for Fidget"
-readme = "../README.md"
+description = "Platform-independent GUI abstractions for Fidget"
+readme = "README.md"
 
 version.workspace = true
 edition.workspace = true
