--- a/fidget-raster/Cargo.toml
+++ b/fidget-raster/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fidget-raster"
-description = "Bitmap and heightmap rendering for complex closed-form implicit surfaces"
-readme = "../README.md"
+description = "Bitmap and heightmap rendering for Fidget"
+readme = "README.md"
 
 version.workspace = true
 edition.workspace = true
