--- a/fidget-rhai/Cargo.toml
+++ b/fidget-rhai/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fidget-rhai"
 description = "Rhai script evaluation for complex closed-form implicit surfaces"
-readme = "../README.md"
+readme = "README.md"
 
 version.workspace = true
 edition.workspace = true
@@ -20,3 +20,6 @@ facet.workspace = true
 rhai.workspace = true
 strum.workspace = true
 heck.workspace = true
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+rhai = { workspace = true, optional = true, features = ["wasm-bindgen"] }
