--- a/fidget-gui/Cargo.toml
+++ b/fidget-gui/Cargo.toml
@@ -12,6 +12,7 @@ rust-version.workspace = true
 
 [dependencies]
 fidget-core = { path = "../fidget-core", version = "=0.4.0" }
+workspace-hack = { version = "0.1", path = "../workspace-hack" }
 
 nalgebra.workspace = true
 serde.workspace = true
