--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,15 @@ wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }
 zerocopy = { version = "0.8", features = ["derive"] }
+
+# Local crates
+fidget.path = "fidget"
+fidget-core    = { path = "fidget-core",    version = "=0.4.0" }
+fidget-gui     = { path = "fidget-gui",     version = "=0.4.0" }
+fidget-jit     = { path = "fidget-jit",     version = "=0.4.0" }
+fidget-mesh    = { path = "fidget-mesh",    version = "=0.4.0" }
+fidget-raster  = { path = "fidget-raster",  version = "=0.4.0" }
+fidget-rhai    = { path = "fidget-rhai",    version = "=0.4.0" }
+fidget-shapes  = { path = "fidget-shapes",  version = "=0.4.0" }
+fidget-solver  = { path = "fidget-solver",  version = "=0.4.0" }
+workspace-hack = { path = "workspace-hack", version = "0.1" }
