--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -15,8 +15,8 @@ rayon.workspace = true
 rhai.workspace = true
 strum.workspace = true
 
-fidget.path = "../../fidget"
-workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+fidget.workspace = true
+workspace-hack.workspace = true
 
 [features]
 jit = ["fidget/jit"]
