--- a/fidget-jit/Cargo.toml
+++ b/fidget-jit/Cargo.toml
@@ -11,8 +11,8 @@ authors.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-fidget-core = { path = "../fidget-core", version = "=0.4.0" }
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
+fidget-core.workspace = true
+workspace-hack.workspace = true
 
 arrayvec.workspace = true
 dynasmrt.workspace = true
@@ -25,4 +25,4 @@ libc.workspace = true
 windows.workspace = true
 
 [dev-dependencies]
-fidget-core = { path = "../fidget-core", version = "=0.4.0", features= ["eval-tests"] }
+fidget-core = { workspace = true, features= ["eval-tests"] }
