--- a/fidget-rhai/Cargo.toml
+++ b/fidget-rhai/Cargo.toml
@@ -11,9 +11,9 @@ authors.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-fidget-core   = { path = "../fidget-core",   version = "=0.4.0" }
-fidget-shapes = { path = "../fidget-shapes", version = "=0.4.0" }
-workspace-hack = { version = "0.1", path = "../workspace-hack" }
+fidget-core.workspace = true
+fidget-shapes.workspace = true
+workspace-hack.workspace = true
 
 enum-map.workspace = true
 facet.workspace = true
