--- a/fidget-gui/Cargo.toml
+++ b/fidget-gui/Cargo.toml
@@ -2,8 +2,8 @@
 name = "fidget-gui"
 description = "Platform-independent GUI abstractions for Fidget"
 readme = "README.md"
+version = "0.4.0"
 
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
