--- a/fidget-mesh/Cargo.toml
+++ b/fidget-mesh/Cargo.toml
@@ -2,8 +2,8 @@
 name = "fidget-mesh"
 description = "Meshing of complex closed-form implicit surfaces"
 readme = "README.md"
+version = "0.4.0"
 
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
