--- a/fidget-raster/Cargo.toml
+++ b/fidget-raster/Cargo.toml
@@ -2,8 +2,8 @@
 name = "fidget-raster"
 description = "Bitmap and heightmap rendering for Fidget"
 readme = "README.md"
+version = "0.4.0"
 
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
