--- a/fidget-rhai/Cargo.toml
+++ b/fidget-rhai/Cargo.toml
@@ -2,8 +2,8 @@
 name = "fidget-rhai"
 description = "Rhai script evaluation for complex closed-form implicit surfaces"
 readme = "README.md"
+version = "0.4.0"
 
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
