--- a/fidget-solver/Cargo.toml
+++ b/fidget-solver/Cargo.toml
@@ -2,8 +2,8 @@
 name = "fidget-solver"
 description = "Constraint solver using Fidget as a backend"
 readme = "README.md"
+version = "0.4.0"
 
-version.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
