--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ document-features = "0.2"
 dynasmrt = "3.0"
 eframe = { version = "0.31", features = ["wgpu"] }
 enum-map = "2.7.3"
-facet = { version = "=0.28.1", features = ["reflect"] }
+facet = { version = "0.30", features = ["reflect"] }
 env_logger = "0.11"
 heck = { version = "0.5" }
 image = { version = "0.25", default-features = false, features = ["png"] }
