--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,13 +52,13 @@ approx = "0.5.1"
 arrayvec = "0.7"
 bincode = "1.3"
 clap = { version = "4", features = ["derive"] }
-criterion = { version = "0.5", features = ["html_reports"] }
+criterion = { version = "0.7", features = ["html_reports"] }
 crossbeam-channel = "0.5"
 document-features = "0.2"
-dynasmrt = "3.0"
+dynasmrt = "4.0"
 eframe = { version = "0.31", features = ["wgpu"] }
 enum-map = "2.7.3"
-facet = { version = "=0.28.1", features = ["reflect"] }
+facet = { version = "0.31", features = ["reflect"] }
 env_logger = "0.11"
 heck = { version = "0.5" }
 image = { version = "0.25", default-features = false, features = ["png"] }
@@ -69,7 +69,7 @@ notify = "8.0"
 ordered-float = "5"
 rand = "0.9"
 rayon = "1.10"
-rhai = { version = "=1.21.0", features = ["sync"] } # pinned due to rhai#1001
+rhai = { version = "1.23.4", features = ["sync"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 static_assertions = "1"
 strum = { version = "0.27.2", features = ["derive"] }
@@ -77,7 +77,7 @@ strum_macros = { version = "0.27.2" } # see fidget#371
 thiserror = "2"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
-windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }
+windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Memory"] }
 zerocopy = { version = "0.8", features = ["derive"] }
 
 # Local crates
