--- a/demos/viewer/Cargo.toml
+++ b/demos/viewer/Cargo.toml
@@ -18,6 +18,7 @@ zerocopy.workspace = true
 
 fidget.workspace = true
 workspace-hack.workspace = true
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
 [features]
 default = ["jit"]
