--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -12,6 +12,7 @@ image.workspace = true
 log.workspace = true
 nalgebra.workspace = true
 ordered-float.workspace = true
+pollster.workspace = true
 rayon.workspace = true
 rhai.workspace = true
 strum.workspace = true
