--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -16,6 +16,7 @@ pollster.workspace = true
 rayon.workspace = true
 rhai.workspace = true
 strum.workspace = true
+wgpu.workspace = true
 
 fidget.workspace = true
 workspace-hack.workspace = true
