--- a/demos/cli/Cargo.toml
+++ b/demos/cli/Cargo.toml
@@ -18,7 +18,7 @@ rhai.workspace = true
 strum.workspace = true
 wgpu.workspace = true
 
-fidget.workspace = true
+fidget = { workspace = true, default-features = true }
 workspace-hack.workspace = true
 
 [features]
