--- a/demos/constraints/Cargo.toml
+++ b/demos/constraints/Cargo.toml
@@ -9,7 +9,7 @@ anyhow.workspace = true
 eframe.workspace = true
 log.workspace = true
 
-fidget.workspace = true
+fidget = { workspace = true, default-features = false, features = ["solver"] }
 workspace-hack.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
