Fix email address in manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ edition = "2024"
 license = "MPL-2.0"
 repository = "https://github.com/mkeeter/fidget"
 description = "Infrastructure for complex closed-form implicit surfaces"
-authors = ["Matt Keeter <matt.j.keeter@gmail.com"]
+authors = ["Matt Keeter <matt.j.keeter@gmail.com>"]
 
 [profile.release]
 debug = true
