--- a/fidget-bytecode/Cargo.toml
+++ b/fidget-bytecode/Cargo.toml
@@ -14,5 +14,6 @@ rust-version.workspace = true
 fidget-core.workspace = true
 workspace-hack.workspace = true
 
+serde.workspace = true
 strum.workspace = true
 zerocopy.workspace = true
